Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -44,11 +44,8 @@
   @media (max-width: $screen-xs-max) {
     height: 100%;
     padding-top: 20px;
-  }
 
-  .search-results-scroll {
-    @media (max-width: $screen-xs-max) {
-      height: 100%;
+    .search-results-scroll {
       overflow-y: scroll; /* has to be scroll, not auto */
       -webkit-overflow-scrolling: touch;
     }
